[gd_scene load_steps=2 format=3 uid="uid://d3mbkrvpkp1e6"]

[ext_resource type="Script" path="res://Scripts/NewClan/NewClanStep2.gd" id="1_ngm15"]

[node name="NewClanStep2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngm15")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(1280, 2.08165e-12)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 640.0
offset_bottom = 161.0
grow_horizontal = 2
alignment = 1

[node name="LeaderNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Entrez le Nom du Leader"
horizontal_alignment = 1

[node name="LeaderNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Nom du Leader"
placeholder_text = "Nom du Leader"
alignment = 1

[node name="ClanNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Entrez le Nom du Clan"
horizontal_alignment = 1

[node name="ClanNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "Nom du Clan"
placeholder_text = "Nom du Clan"
alignment = 1

[node name="CreateClanButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cr√©er le Clan"
